-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.0-beta1
-
None
-
-
e1f1d4522 (11.0)
I'm running a self-compiled version of QtCreator from the `11.0` branch and noticed some issues with the preferences:
- In `Beautifier` I have automatic format on save enabled with clang-format. Whenever I close and restart QtCreator, the settings are reverted to default (auto-format on save not enabled and "Artistic Style" selected as "Tool").
- In my cmake project, the build steps are empty, as are the clean steps. When I add the default build and clean steps.
There might be other places. I feel like some of my Kit settings got mixed up compared to QtCreator 10.0, but I can't say for sure.
Note sure if it's related, what appears to be new as well is that in the Messages window I see some error messages after cmake has completed:
Compiler feature detection failure!
...
error: invalid argument '-std=c11' not allowed with 'C++'
I'm not sure which feature or tool that is causing. But compilation works fine (after manually creating the build steps).
Overall, I'm relatively new to compiling my own version of QtCreator, so I'm not sure if these issues are related to the way I build it, or if this is some issue with 11.0.
Additional information: I built with Qt 6.5.1 from homebrew and prebuilt llvm as recommended in the Readme:
cmake -DCMAKE_BUILD_TYPE=Release -GNinja -DCMAKE_PREFIX_PATH="$(brew --prefix)/opt/qt;../../dependencies/libclang-release_14.0.3-based-macos-universal/libclang" ..
cmake --install . --prefix /Applications/
- is duplicated by
-
QTCREATORBUG-29215 Beautifier automatic formatting keeps getting disabled
-
- Closed
-