Beautifier: Fix restoring of settings

Amends 7dd27301ab2ea3b5d049d167d51dca8b9b5461d5

Fixes: QTCREATORBUG-29250
Change-Id: Iaa0af369055708c738c37ffc466f3d0fe8901b89
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>